test/TestPhases/parser/valid/strings.blc
@[CFunction (binding = "hello \n lovely w\"orld", header= "bla.h")]
extern function invalidEscape()

@[CFunction (binding = "hello \255 \\ bla\
world\2" , header= "bla.h")]
extern function decimalTooLarge()

@[CFunction (binding = "hello \x9a
 world \0
 bla" , header= "bla.h")]
extern function invalidHex()

@[CFunction (binding = """
                       printf("%d", $1);
                         blafasel;

                       faselbla
                       """, 
             header= "blah.h")]
extern function tripleQuoteBinding (x: nat8)

@[EntryPoint]
activity main()()
    await true
end


