test/TestPhases/parser/invalid/stringeof.blc

@[CFunction (binding = """eof in multi-line string
             header = "bla.h") ]

@[EntryPoint]
activity Main () ()
    await true
end